[package]
# essential fields
name = "iccp-pm"
version = "0.0.1"
edition = "2021"
# additional fields (in alphabetic order)
authors = ["Glenn Adams <glenn@skynav.com>"]
categories = ["network-programming"]
description = """
iccp-pm is a library that implements a Telecontrol Application Service Element (TASE.2)
protocol manager that adheres to IEC 60870-6-503:2014;
not yet ready for download - placeholder for work in progress
"""
documentation = "https://github.com/skynav/iccp/crates/iccp-pm"
homepage = "https://github.com/skynav/iccp/crates/iccp-pm"
keywords = ["iccp"]
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/skynav/iccp/crates/iccp-pm"

[dependencies]
